--- a/index.html
+++ b/index.html
@@ -7,16 +7,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Desde 1950, a Sapataria do Oswaldo conserta sapatos, bolsas e artigos de couro em geral com excelência no atendimento">
     <meta name="keywords" content="Bolsas, sapatos, cintos, sapataria, artigos de couro, consertos">
-    <meta name="author" content="Anderson Fontes">
-
+    <meta name="author" content="Anderson Fontes">    
     <title>Sapataria do Oswaldo</title>
+
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-    <h1> Sapataria do Oswaldo</h1>
-<h2> Desde 1950 consertando o seu sapato</h2>
-<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor ullam quidem corporis dolorem reiciendis commodi eum quaerat suscipit velit ducimus.
-</p>
-    
+    <header>   
+        <h1 class="page-title"> Sapataria do Oswaldo</h1>
+        <h2> Desde 1950 consertando o seu sapato</h2>
+    </header>
+
+    <main>
+        <article>
+            <h1 class="article-title">Filosofia de trabalho</h1>
+            <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati sapiente laboriosam excepturi, a eos provident, veritatis, enim soluta adipisci dolores incidunt debitis ex quae harum nihil officia rerum culpa consectetur placeat totam optio ea? Nihil vitae corrupti quibusdam reprehenderit soluta!
+            </p>
+        </article>    
+        
+    </main>
 </body>
 </html>
