teste alteração no main

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
             <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati sapiente laboriosam excepturi, a eos provident, veritatis, enim soluta adipisci dolores incidunt debitis ex quae harum nihil officia rerum culpa consectetur placeat totam optio ea? Nihil vitae corrupti quibusdam reprehenderit soluta!
             </p>
         </article>    
+
+        <p> OLÁ EU SOU UMA ALTERAÇÃO NO BRANCH MAIN</p>
         
     </main>
 </body>
