--- a/teste99.html
+++ b/teste99.html
@@ -7,7 +7,8 @@
     <title>Testes de Git</title>
 </head>
 <body>
-    <h1> Testes de Git!!!</h1>
+    <h1> Testes de Git!!! Conflitos!!</h1>
+    <p> nova linha</p>
     <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero, officiis.</p>
 </body>
 </html>
