criado conflitos diversos p/ testes

--- a/teste99.html
+++ b/teste99.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
+<!--     <meta charset="UTF-8"> -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <title>Testes de Git</title>
+    <meta name="keywords" content="palavras, qualquer, exemplo, keywords">
+    <title>Testes de Git!! novos conflitos</title>
 </head>
 <body>
     <h1> Testes de Git!!! Conflitos!!</h1>
-    <p> nova linha</p>
-    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero, officiis.</p>
+    <p> conflito na nova linha</p>
+    <p> Lorem, ipsum dolor sit amet elit. Vero, officiis.</p>
 </body>
 </html>
