conflitos diversos AV

--- a/teste99.html
+++ b/teste99.html
@@ -1,15 +1,20 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-<!--     <meta charset="UTF-8"> -->
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="palavras, qualquer, exemplo, keywords">
-    <title>Testes de Git!! novos conflitos</title>
-</head>
-<body>
+
+
+<html>
+    <html>
+        <title="dssdsdfsd">
+            dfdfgfdgdfg
+            dfgdfgdfgdfgrheyt
+            jnghjhdfgvfdxv
+            sdfsdfsdfd
+            hryj
+            
     <h1> Testes de Git!!! Conflitos!!</h1>
-    <p> conflito na nova linha</p>
-    <p> Lorem, ipsum dolor sit amet elit. Vero, officiis.</p>
-</body>
+            sdf
+            sdg
+            dfg
+            hd
+    <psdfsdfsdfdsdsfdsf> conflito na nova linha</p>
+    <psdfsdfsdfsdfs> Lorem, ipsum dolor sit amet elisdfsdfsddsfdft. Vero, officiis.</p>
+</bsdfdsfody>
 </html>
