alterações aleatorias main

--- a/teste99.html
+++ b/teste99.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="ch">
 <head>
-<!--     <meta charset="UTF-8"> -->
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta charset="UTF-8">
+    <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
+    fghfghfghdfgh
+    dfhfgh
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="palavras, qualquer, exemplo, keywords">
-    <title>Testes de Git!! novos conflitos</title>
+    <title>AV main</title>
 </head>
 <body>
-    <h1> Testes de Git!!! Conflitos!!</h1>
-    <p> conflito na nova linha</p>
-    <p> Lorem, ipsum dolor sit amet elit. Vero, officiis.</p>
+<div>
+    <section> Testes de Git!!! Conflitosdfs!!</h1>
+        <section> Testes de Git!!! dfgdfgfdgfdgd Conflitosdfs!!</h1>
+    <h3> conflito na nova ldfinha</p>
+    <div> Lorem, ipsum dolor sit amet elit. Vero, officiis.</p></div>
 </body>
 </html>
