--- a/teste99.html
+++ b/teste99.html
@@ -1,17 +1,20 @@
-   <html>
-    <head>   
-   <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+   <!-- <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Testes de Git</title>
+    <!-- <title>Testes de Git</title>
 </head>
 <body>
-    <h2> Testes sdfdsfdsfde Git!!! Conflitos!!</h2>
+    <h2> Testes sdfdsfdsfde Git!!! Conflitos!!</h2> -->
     <h2> Testes sddfgdfgfdsfdsfde Git!!!dfgfdgfdgfd  Conflitos!!</h2>
-    <p> nova linha</p>
-    <div> nova linha</div>
+    <p> nova linhadfghdfgfd</p>
+    <section> nova linhdfgdfgdfgfga</section>
+    dfg
+    dfh
+    dfg
+    fdh
     <p> nova linha</p>
     <p> sdfsdfsdsd sdf dfsdfds dsfd snova linhasdfsdfdsfsdf</p>
-    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero, officiis.</p>
-</body>
-</html>
+    sdfdsfdsfdesdf
+
+
